tests/fail/multiple_alias_errors.tig
let
    type a = b
    type b = c
    type c = d
    type d = b
in 
    let
        type g = h
        type h = non_defined
    in
        2
    end
end
